# wellvector-wellbore-pipeline

./: README.md  pyproject.toml
data/ocr_cache/: 149_01_WDSS_General_Information_page0.txt  149_01_WDSS_General_Information_page1.txt  149_7_11_1_CORE_STUDY_page0.txt  149_7_11_1_CORE_STUDY_page1.txt  149_7_11_1_CORE_STUDY_page2.txt  149_7_11_1_CORE_STUDY_page3.txt  149_7_11_1_CORE_STUDY_page4.txt  149_7_11_1_DIAGRAM_PSI_TESTING_page0.txt  149_7_11_1_DIAGRAM_PSI_TESTING_page1.txt  149_7_11_1_DRILLING_FLUID_SUMMARY_page0.txt  149_7_11_1_DRILLING_FLUID_SUMMARY_page1.txt  149_7_11_1_DRILLING_FLUID_SUMMARY_page2.txt  149_7_11_1_DRILLING_FLUID_SUMMARY_page4.txt  149_7_11_1_FORMATION_TEST_page0.txt  149_7_11_1_FORMATION_TEST_page1.txt  149_7_11_1_FORMATION_TEST_page2.txt  149_7_11_1_FORMATION_TEST_page3.txt  149_7_11_1_FORMATION_TEST_page4.txt  149_7_11_1_LOG_ANALYSIS_page0.txt  149_7_11_1_LOG_ANALYSIS_page1.txt  149_7_11_1_LOG_ANALYSIS_page2.txt  149_7_11_1_LOG_ANALYSIS_page3.txt  149_7_11_1_LOG_ANALYSIS_page4.txt  149_7_11_1_WELL_COMPLETION_REPORT_1_page0.txt  149_7_11_1_WELL_COMPLETION_REPORT_1_page1.txt  149_7_11_1_WELL_COMPLETION_REPORT_1_page10.txt  149_7_11_1_WELL_COMPLETION_REPORT_1_page11.txt  149_7_11_1_WELL_COMPLETION_REPORT_1_page12.txt  149_7_11_1_WELL_COMPLETION_REPORT_1_page13.txt  149_7_11_1_WELL_COMPLETION_REPORT_1_page14.txt  149_7_11_1_WELL_COMPLETION_REPORT_1_page2.txt  149_7_11_1_WELL_COMPLETION_REPORT_1_page3.txt  149_7_11_1_WELL_COMPLETION_REPORT_1_page4.txt  149_7_11_1_WELL_COMPLETION_REPORT_1_page5.txt  (+181 more)
output/: casing_design.csv
src/pipeline/: main.py  (+7 more)
